welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:0: error: class PatternPicture needs to be abstract, since method MotifHaut is not defined
class PatternPicture extends SimpleBuggle {
      ^